fix: マイナスボタンの表示を±から−に変更

--- a/app/templates/shisoku/index.html
+++ b/app/templates/shisoku/index.html
@@ -106,7 +106,7 @@
                         <button class="number-btn" data-number="9">9</button>
                     </div>
                     <div class="number-pad-row">
-                        <button id="toggle-sign" class="number-btn number-btn-sign">±</button>
+                        <button id="toggle-sign" class="number-btn number-btn-sign">−</button>
                         <button class="number-btn" data-number="0">0</button>
                         <button id="clear-input" class="number-btn number-btn-clear">削除</button>
                     </div>
