fix: 単漢字の案内文を更新
- 単漢字練習の説明文を『漢字と読みをノートに書いて書き取り練習しよう。』に変更

--- a/app/templates/tankanji/index.html
+++ b/app/templates/tankanji/index.html
@@ -56,7 +56,7 @@
             <div id="quizKanji" class="kanji-large">漢</div>
           </div>
           <div id="strokeCount" class="stroke-count">画数：-</div>
-          <p class="instruction">漢字をノートに書いて書き取り練習しよう。</p>
+          <p class="instruction">漢字と読みをノートに書いて書き取り練習しよう。</p>
           <div id="answerDisplay" class="answer-display" style="display: block;">
             <div class="reading-list">
               <div id="onReading" class="reading-item"></div>
